media/css/mozorg/home/home.scss
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

$font-path: '/media/fonts';
$image-path: '/media/protocol/img';

@import '../../../protocol/css/includes/lib';
@import '../../../protocol/css/includes/fonts/metropolis';
@import '../../../protocol/css/components/hero';
@import '../../../protocol/css/components/billboard';
@import '../../../protocol/css/components/newsletter-form';
@import '../../../protocol/css/templates/card-layout';
@import '../../../protocol/css/components/picto-card';


.mzp-c-hero .c-primary-cta-title {
    @include font-firefox;
    @include text-title-md;
}

//* -------------------------------------------------------------------------- */
// Billboard
.mzp-c-billboard {
    margin-top: 0;
}

// offset image override
.mzp-c-billboard .mzp-c-billboard-image-container {
    @media #{$mq-lg} {
        margin: 0;
        padding: $spacing-lg $spacing-sm;
    }
}

//* -------------------------------------------------------------------------- */
// Picto Cards

// Picto card custom icon sizes.
// These should be standardized into a `large` icon size.
// https://github.com/mozilla/protocol/issues/382

.mzp-c-card-picto .mzp-c-card-picto-content {
    padding-top: 140px;

    &:before {
        background-color: transparent;
        background-position: top left;
        background-repeat: no-repeat;
        height: 100px;
        margin-left: -52px;
        width: 100px;
    }

    @media #{$mq-lg} {
        .mzp-c-card-picto-title {
            @include text-title-sm;
            margin-bottom: $spacing-xl;
        }
    }
}

.extensions .mzp-c-card-picto-content::before {
    @include at2x('/media/img/home/externals-sprite.png', 100px, 300px);
}

.careers .mzp-c-card-picto-content::before {
    @include at2x('/media/img/home/externals-sprite.png', 100px, 300px);
    background-position: left -100px;
}

.help .mzp-c-card-picto-content::before {
    @include at2x('/media/img/home/externals-sprite.png', 100px, 300px);
    background-position: left -200px;
}


//* -------------------------------------------------------------------------- */
// Two column section

.c-column-container {
    @include clearfix;
}

.c-column {
    box-sizing: border-box;
    display: block;
    padding: $spacing-xl 0;

    @media #{$mq-lg} {
        float: left;
        padding: 0 $spacing-2xl;
        width: 50%;

        &:first-child {
            border-right: 1px solid rgba(0,0,0,.2);
        }
    }

    .c-column-content {
        @include bidi(((text-align, left, right),));

        h2 {
            margin-bottom: $spacing-xl;
        }
    }
}

